--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gradio_dataframe_download",
-  "version": "0.3.26",
+  "version": "0.0.1",
   "description": "Gradio UI packages",
   "type": "module",
   "author": "Andrew Ridyard",
@@ -12,11 +12,6 @@
       "gradio": "./Index.svelte",
       "svelte": "./dist/Index.svelte",
       "types": "./dist/Index.svelte.d.ts"
-    },
-    "./example": {
-      "gradio": "./Example.svelte",
-      "svelte": "./dist/Example.svelte",
-      "types": "./dist/Example.svelte.d.ts"
     },
     "./package.json": "./package.json"
   },
@@ -35,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gradio-app/gradio.git",
-    "directory": "js/button"
+    "url": "git+https://github.com/andyrids/gradio-dataframe-download.git",
+    "directory": "frontend"
   }
 }
